fix text overflow on recipe cards

--- a/client/src/style/recipes.css
+++ b/client/src/style/recipes.css
@@ -64,8 +64,12 @@
 .recipe-card-title {
     margin-bottom: 5%;
     padding: 1%;
+    display: -webkit-box;
+    overflow: hidden;
+   -webkit-line-clamp: 2;
+   -webkit-box-orient: vertical;
+   text-overflow: ellipsis;
 }
-
 
 .sticky-blue {
     background: -webkit-linear-gradient(-45deg, #70d7e9 81%,#70d7e9 82%,#70d7e9 82%,#b4e5ee 100%); 
